--- a/vercel.json
+++ b/vercel.json
@@ -2,12 +2,17 @@
   "version": 2,
   "builds": [
     {
+      "src": "backend/api/index.js",
+      "use": "@vercel/node"
+    },
+    {
       "src": "frontend/package.json",
       "use": "@vercel/static-build",
-      "config": { "distDir": "frontend/dist" }
+      "config": { "distDir": "dist" }
     }
   ],
   "routes": [
-    { "src": "/(.*)", "dest": "frontend/dist/index.html" }
+    { "src": "/api/(.*)", "dest": "backend/api/index.js" },
+    { "src": "/(.*)", "dest": "frontend/dist/$1" }
   ]
 }
